fix: scroll bar overlap

--- a/webui/react/src/hooks/useModal/Checkpoint/useModalCheckpoint.module.scss
+++ b/webui/react/src/hooks/useModal/Checkpoint/useModalCheckpoint.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   max-height: 400px;
   overflow: auto;
+  padding-right: 16px;
 
   .row {
     display: flex;
